--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 
   font-family: 'Lato', sans-serif;
+}
+
+
+.container {
+  margin: 0 auto;
+  max-width: 480px;
+  margin-top: 10px;
 }
